# gridiron-user-service

./: .gitignore  Cargo.toml  Dockerfile  README.md
sql/migrate/: 001_create_teams_table.sql
src/: controllers.rs  db.rs  main.rs
src/controllers/: team_controller.rs
src/models/: team.rs
tests/: helpers.rs  test.rs
